; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_utmp-wtmp.c_write_entry_utmp.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_utmp-wtmp.c_write_entry_utmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.utmpx = type { i32 }

@_PATH_UTMPX = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.utmpx*)* @write_entry_utmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @write_entry_utmp(%struct.utmpx* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.utmpx*, align 8
  %4 = alloca i32, align 4
  store %struct.utmpx* %0, %struct.utmpx** %3, align 8
  %5 = load %struct.utmpx*, %struct.utmpx** %3, align 8
  %6 = call i32 @assert(%struct.utmpx* %5)
  %7 = load i32, i32* @_PATH_UTMPX, align 4
  %8 = call i64 @utmpxname(i32 %7)
  %9 = icmp slt i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i32, i32* @errno, align 4
  %12 = sub nsw i32 0, %11
  store i32 %12, i32* %2, align 4
  br label %25

13:                                               ; preds = %1
  %14 = call i32 (...) @setutxent()
  %15 = load %struct.utmpx*, %struct.utmpx** %3, align 8
  %16 = call i32 @pututxline(%struct.utmpx* %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %21, label %18

18:                                               ; preds = %13
  %19 = load i32, i32* @errno, align 4
  %20 = sub nsw i32 0, %19
  store i32 %20, i32* %4, align 4
  br label %22

21:                                               ; preds = %13
  store i32 0, i32* %4, align 4
  br label %22

22:                                               ; preds = %21, %18
  %23 = call i32 (...) @endutxent()
  %24 = load i32, i32* %4, align 4
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %22, %10
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i32 @assert(%struct.utmpx*) #1

declare dso_local i64 @utmpxname(i32) #1

declare dso_local i32 @setutxent(...) #1

declare dso_local i32 @pututxline(%struct.utmpx*) #1

declare dso_local i32 @endutxent(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
